--- a/src/App.css
+++ b/src/App.css
@@ -25,16 +25,19 @@ main section{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center left;
-  margin-left: 150px;
+  justify-content: center;
+  justify-content: space-between;
+  margin-left: 100px;
+
 }
 main section article{
   border: solid 1px black;
   border-radius: 5px;
-  margin-left: 30px;
-  padding: 10px;
+  max-width: 25%;
+  padding: 30px;
+  margin:5px;
   margin-bottom: 20px;
-  min-width: 200px;
   background-color: #f5f5f5;
+  
   
 }
